gcc/testsuite/rust/rustc/ui/typeck/check-args-on-fn-err-2_dg.rs
fn main() {
    a((), 1i32 == 2u32);
// { dg-error ".E0425." "" { target *-*-* } .-1 }
// { dg-error ".E0425." "" { target *-*-* } .-2 }
}

